--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -17,8 +17,8 @@ $config = array (
     'showorg' => true,
     'background_jobs' => true,
     'cached_attachments' => true,
-    'email' => 'email@address.com',
-    'contact' => 'email@address.com',
+    'email' => '{{ misp_email_contact }}',
+    'contact' => '{{ misp_email_contact }}',
     'cveurl' => 'http://cve.circl.lu/cve/',
     'disablerestalert' => false,
     'default_event_distribution' => '1',
