sync repositories + travis test: docker

--- a/templates/nginx-misp.conf.j2
+++ b/templates/nginx-misp.conf.j2
@@ -1,19 +1,22 @@
-server { listen 80;
+server {
+    listen 80;
 
-    root /var/www/MISP/app/webroot/;
+    root {{ misp_rootdir }}/app/webroot/;
     index index.php index.html index.htm;
     
     server_name _;
     
     location / {
-            try_files \$uri \$uri/ /index.php;
+            try_files $uri $uri/ /index.php;
     }
     
     location ~ \.php$ {
-            try_files \$uri =404;
-            fastcgi_param SCRIPT_FILENAME \$document_root\$fastcgi_script_name;
+            try_files $uri =404;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
-            fastcgi_pass unix:/var/run/php5-fpm.sock;
+            fastcgi_pass unix:{{ nginx_sock }};
     
+            ## https://httpoxy.org/, 201607
+            fastcgi_param HTTP_PROXY "";
     }
 }
