--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -5,7 +5,7 @@ $config = array (
   'Security' => 
   array (
     'level' => 'medium',
-    'salt' => '{{ salt.stdout }}',
+    'salt' => '{{ salt }}',
     'cipherSeed' => '',
     'password_policy_length' => {{ misp_passreq_lenth }},
     //'auth'=>array('CertAuth.Certificate'), // additional authentication methods
