sync repositories - ansible v2.2 review, users API, no_log, centos7 pip3 fix

--- a/templates/nginx-misp.conf.j2
+++ b/templates/nginx-misp.conf.j2
@@ -19,4 +19,12 @@ server {
             ## https://httpoxy.org/, 201607
             fastcgi_param HTTP_PROXY "";
     }
+
+## just in case
+    location ~* /PyMISP {
+            deny all;
+    }
+    location ~* /keys.(py|txt)$ {
+            deny all;
+    }
 }
