sync repositories - cleaning, fix critical diagnostics issues, ensure can execute role to update MISP at least for minor update

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -30,8 +30,10 @@ $config = array (
     'footer_logo' => '',
     'take_ownership_xml_import' => false,
     'unpublishedprivate' => false,
-  	'disable_emailing' => false,
+    'disable_emailing' => false,
     'live' => true,
+    'host_org_id' => 1,
+    'proposals_block_attributes' => true,
   ),
   'GnuPG' => 
   array (
@@ -87,5 +89,7 @@ $config = array (
   array (
     'Enrichment_services_enable' => true,
     'Enrichment_hover_enable' => true,
+    'Import_services_enable' => true,
+    'Export_services_enable' => true,
   ),
 );
