vagrant update for travix/lxd/kitchen, backup script with hash

--- a/templates/backup-misp.sh.j2
+++ b/templates/backup-misp.sh.j2
@@ -15,4 +15,5 @@ mysqldump -u misp --opt --single-transaction misp > $dest/mysqldump-misp.sql
 tar czf $destfile $dirs $dest/mysqldump-misp.sql
 rm $dest/mysqldump-misp.sql
 tar tzf $destfile > /dev/null
+openssl dgst -sha512 $destfile > $destfile.distinfo
 
