apache: missing Listen if non-usual port

--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -1,3 +1,7 @@
+{% if misp_base_port != 80 and misp_base_port != 443 %}
+Listen {{ misp_base_port }}
+
+{% endif %}
 <VirtualHost *:{{ misp_base_port }}>
     ServerAdmin {{ misp_email_contact }}
     ServerName {{ misp_servername }}
