review MISP config.php template to address any recommended diagnostics

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -40,6 +40,21 @@ $config = array (
     'redis_port' => '{{ misp_redis_port | default('6379') }}',
     'redis_database' => '{{ misp_redis_database | default('13') }}',
     'redis_password' => '{{ misp_redis_password | default('redis_password') }}',
+    'ssdeep_correlation_threshold' => 40,
+    'extended_alert_subject' => false,
+    'default_event_threat_level' => '4',
+    'enableEventBlacklisting' => true,
+    'enableOrgBlacklisting' => true,
+    'log_client_ip' => true,
+    'log_auth' => true,
+    'disableUserSelfManagement' => false,
+    'block_event_alert' => false,
+    'block_event_alert_tag' => 'no-alerts="true"',
+    'block_old_event_alert' => false,
+    'block_old_event_alert_age' => 180,
+    'incoming_tags_disabled_by_default' => false,
+#    'newUserText' => ,
+#    'passwordResetText' => ,
   ),
   'GnuPG' => 
   array (
@@ -101,9 +116,25 @@ $config = array (
   array (
     'Enrichment_services_enable' => true,
     'Enrichment_hover_enable' => true,
+    'Enrichment_services_url' => 'http://127.0.0.1',
+    'Enrichment_services_port' => 6666,
+    'Enrichment_timeout' => 10,
+    'Enrichment_hover_timeout' => 5,
     'Import_services_enable' => true,
+    'Import_services_url' => 'http://127.0.0.1',
+    'Import_services_port' => 6666,
+    'Import_services_timeout' => 10,
     'Export_services_enable' => true,
+    'Export_services_url' => 'http://127.0.0.1',
+    'Export_services_port' => 6666,
+    'Export_services_timeout' => 10,
     'Cortex_services_enable' => false,
+    'Cortex_services_url' => 'http://127.0.0.1',
+    'Cortex_services_port' => 9000,
+    'Cortex_services_timeout' => 120,
+    'Sightings_range' => 365,
+    'Sightings_anonymise' => false,
+    'Sightings_policy' => 0,
   ),
   'ApacheShibbAuth' => NULL,
   'ApacheSecureAuth' => NULL,
