config.php template: fix some naming

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -123,7 +123,7 @@ $config = array (
     'Import_services_enable' => true,
     'Import_services_url' => 'http://127.0.0.1',
     'Import_services_port' => 6666,
-    'Import_services_timeout' => 10,
+    'Import_timeout' => 10,
     'Export_services_enable' => true,
     'Export_services_url' => 'http://127.0.0.1',
     'Export_services_port' => 6666,
@@ -131,7 +131,7 @@ $config = array (
     'Cortex_services_enable' => false,
     'Cortex_services_url' => 'http://127.0.0.1',
     'Cortex_services_port' => 9000,
-    'Cortex_services_timeout' => 120,
+    'Cortex_timeout' => 120,
     'Sightings_range' => 365,
     'Sightings_anonymise' => false,
     'Sightings_policy' => 0,
