more snuffleupagus compatibility review

--- a/templates/misp-snuffleupagus-rules.ini.j2
+++ b/templates/misp-snuffleupagus-rules.ini.j2
@@ -16,7 +16,7 @@
 #sp.readonly_exec.enable();
 ## simulation mode
 # FIXME! PHP Fatal error:  [snuffleupagus][unserialize] The serialized object is too small. in /var/www/MISP/app/Lib/cakephp/lib/Cake/Cache/Engine/FileEngine.php on line 194
-sp.unserialize_hmac.simulation().enable();
+#sp.unserialize_hmac.simulation().enable();
 ## those seems to create issues with apache2 start
 #sp.global_strict.simulation().enable();
 #sp.sloppy_comparison.simulation().enable();
