switch test/default to https, self-signed cert - pending pymisp upstream PR#285, redis 'Cannot assign requested address', Cake 'The request has been black-holed'

--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -29,4 +29,10 @@ Listen {{ misp_base_port }}
     ServerSignature Off
     Header set X-Content-Type-Options nosniff
     Header set X-Frame-Options DENY
+
+{% if misp_base_port == 443 %}
+    SSLCertificateFile {{ ssl_dir }}/{{ ansible_fqdn }}.crt
+    SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_fqdn }}.key
+    Include {{ apacheetc }}/harden-apache2-https.conf
+{% endif %}
 </VirtualHost>
