--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -1,4 +1,6 @@
-{% if misp_base_port != 80 and misp_base_port != 443 %}
+{% if misp_base_port != 80 and misp_base_port != 443 and ansible_os_family == "Debian" %}
+Listen {{ misp_base_port }}
+{% elif misp_base_port != 80 and ansible_os_family == "RedHat" %}
 Listen {{ misp_base_port }}
 
 {% endif %}
@@ -31,6 +33,9 @@ Listen {{ misp_base_port }}
     Header set X-Frame-Options DENY
 
 {% if misp_base_port == 443 %}
+{% if ansible_os_family == "RedHat" %}
+    SSLEngine on
+{% endif %}
     SSLCertificateFile {{ ssl_dir }}/{{ ansible_fqdn }}.crt
     SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_fqdn }}.key
     Include {{ apacheetc }}/harden-apache2-https.conf
