--- a/templates/backup-misp.sh.j2
+++ b/templates/backup-misp.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 ## backup script for misp
 
 export PATH=/usr/sbin:/usr/bin:/sbin:/bin
