--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -1,5 +1,6 @@
 <?php
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
+
 $config = array (
   'debug' => 0,
   'site_admin_debug' => false,
