--- a/templates/gpg-template.j2
+++ b/templates/gpg-template.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+{{ ansible_managed | comment }}
 # https://www.gnupg.org/documentation/manuals/gnupg/Unattended-GPG-key-generation.html
 %echo Generating a basic OpenPGP key
 Key-Type: DSA
