template config.php: fix most recommended settings

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -15,6 +15,7 @@ $config = array (
     'email' => '{{ misp_email_contact }}',
     'contact' => '{{ misp_email_contact }}',
     'cveurl' => 'http://cve.circl.lu/cve/',
+    'cweurl' => 'http://cwe.circl.lu/cwe/',
     'disablerestalert' => false,
     'default_event_distribution' => '1',
     'default_attribute_distribution' => 'event',
@@ -39,7 +40,6 @@ $config = array (
     'enableOrgBlacklisting' => true,
     'log_client_ip' => true,
     'log_auth' => true,
-    'disableUserSelfManagement' => false,
     'block_event_alert' => false,
     'block_event_alert_tag' => 'no-alerts="true"',
     'block_old_event_alert' => false,
@@ -49,6 +49,16 @@ $config = array (
     'external_baseurl' => '{{ misp_external_base_url | default(misp_base_url) }}',
     'osuser' => '{{ www_user }}',
     'default_event_tag_collection' => 0,
+    'python_bin' => '{{ misp_virtualenv }}/bin/python',
+    'enableEventBlocklisting' => true,
+    'enableOrgBlocklisting' => true,
+    'disableUserSelfManagement' => false,
+    'disable_user_login_change' => false,
+    'disable_user_password_change' => false,
+    'disable_user_add' => false,
+    'event_alert_republish_ban' => false,
+    'event_alert_republish_ban_threshold' => 5,
+    'event_alert_republish_ban_refresh_on_retry' => false,
   ),
   'GnuPG' =>
   array (
@@ -81,6 +91,8 @@ $config = array (
     'csp_enforce' => {{ misp_csp_enforce | default('true') }},
     'advanced_authkeys' => {{ misp_advanced_authkeys | default('false') }},
     //'auth'=>array('CertAuth.Certificate'), // additional authentication methods
+    'log_each_individual_auth_fail' => false,
+    'rest_client_baseurl' => '{{ misp_rest_client_baseurl | default('https://localhost') }}',
   ),
   'Session.defaults' => 'php',
   'Session.timeout' => 60,
@@ -103,7 +115,7 @@ $config = array (
     'Export_services_enable' => true,
     'Export_services_url' => 'http://127.0.0.1',
     'Export_services_port' => 6666,
-    'Export_services_timeout' => 10,
+    'Export_timeout' => 10,
     'Cortex_services_enable' => false,
     'Cortex_services_url' => 'http://127.0.0.1',
     'Cortex_services_port' => 9000,
@@ -111,6 +123,7 @@ $config = array (
     'Sightings_range' => 365,
     'Sightings_anonymise' => false,
     'Sightings_policy' => 0,
+    'Sightings_sighting_db_enable' => false,
     'Enrichment_hover_popover_only' => false,
   ),
   'CertAuth' => NULL,
