--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -80,7 +80,7 @@ $config = array (
   'SecureAuth' =>
   array (
     'amount' => 5,
-    'expire' => {{ misp_SecureAuth_expire }},
+    'expire' => {{ misp_secureauth_expire }},
   ),
   'Security' =>
   array (
