fix few config settings and file permissions

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -30,9 +30,9 @@ $config = array (
     'proposals_block_attributes' => true,
     'language' => '{{ misp_language | default('eng') }}',
     'redis_host' => '{{ misp_redis_host | default('127.0.0.1') }}',
-    'redis_port' => '{{ misp_redis_port | default('6379') }}',
+    'redis_port' => {{ misp_redis_port | default('6379') }},
     'redis_database' => '{{ misp_redis_database | default('13') }}',
-    'redis_password' => '{{ misp_redis_password | default('redis_password') }}',
+    'redis_password' => '{{ misp_redis_password | default('') }}',
     'ssdeep_correlation_threshold' => 40,
     'extended_alert_subject' => false,
     'default_event_threat_level' => '4',
@@ -72,7 +72,7 @@ $config = array (
   'Proxy' =>
   array (
     'host' => '{{ misp_proxy_host }}',
-    'port' => '{{ misp_proxy_port }}',
+    'port' => {{ misp_proxy_port }},
     'method' => '{{ misp_proxy_method }}',
     'user' => '{{ misp_proxy_user }}',
     'password' => '{{ misp_proxy_pass }}',
@@ -93,6 +93,9 @@ $config = array (
     //'auth'=>array('CertAuth.Certificate'), // additional authentication methods
     'log_each_individual_auth_fail' => false,
     'rest_client_baseurl' => '{{ misp_rest_client_baseurl | default('https://localhost') }}',
+    'force_https' => true,
+    'disable_browser_cache' => true,
+    'check_sec_fetch_site_header' => true,
   ),
   'Session.defaults' => 'php',
   'Session.timeout' => 60,
