add background-jobs misp-workers with supervisor

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -59,6 +59,11 @@ $config = array (
     'event_alert_republish_ban' => false,
     'event_alert_republish_ban_threshold' => 5,
     'event_alert_republish_ban_refresh_on_retry' => false,
+    'store_api_access_time' => true,
+    'user_email_notification_ban' => true,
+    'user_email_notification_ban_time_threshold' => 120,
+    'user_email_notification_ban_amount_threshold' => 10,
+    'block_old_event_alert_by_date' => 30,
   ),
   'GnuPG' =>
   array (
@@ -128,6 +133,25 @@ $config = array (
     'Sightings_policy' => 0,
     'Sightings_sighting_db_enable' => false,
     'Enrichment_hover_popover_only' => false,
+    'Action_services_enable' => true,
+    'Action_services_url' => 'http://127.0.0.1',
+    'Action_services_port' => 6666,
+    'Action_timeout' => 10,
+    'Workflow_enable' => false,
+  ),
+  'SimpleBackgroundJobs' =>
+  array (
+    'supervisor_password' => '{{ misp_supervisorhttp_pass }}',
+    'supervisor_user' => '{{ misp_supervisorhttp_user }}',
+    'enabled' => true,
+    'redis_host' => '{{ misp_redis_host | default('127.0.0.1') }}',
+    'redis_port' => {{ misp_redis_port | default('6379') }},
+    'redis_database' => 1,
+    'redis_namespace' => 'background_jobs',
+    'max_job_history_ttl' => 86400,
+    'supervisor_host' => 'localhost',
+    'supervisor_port' => 9001,
+    'redis_password' => '{{ misp_redis_password | default('') }}',
   ),
   'CertAuth' => NULL,
   'ApacheShibbAuth' => NULL,
