--- a/templates/misp-snuffleupagus-rules.ini.j2
+++ b/templates/misp-snuffleupagus-rules.ini.j2
@@ -55,7 +55,7 @@ sp.disable_function.function("include").drop()
 
 # Prevent `system`-related injections
 sp.disable_function.function("system").param("command").value_r("[$|;&`\\n]").drop();
-sp.disable_function.function("shell_exec").param("command").value_r("[$|;&`\\n]").drop();
+# sp.disable_function.function("shell_exec").param("command").value_r("[$|;&`\\n]").drop();
 sp.disable_function.function("exec").param("command").value_r("[$|;&`\\n]").drop();
 sp.disable_function.function("proc_open").param("command").value_r("[$|;&`\\n]").drop();
 
@@ -73,13 +73,13 @@ sp.disable_function.function("ini_get").param("var_name").value_r("suhosin").dro
 sp.disable_function.function("function_exists").param("function_name").value("eval").drop();
 sp.disable_function.function("function_exists").param("function_name").value("exec").drop();
 sp.disable_function.function("function_exists").param("function_name").value("system").drop();
-sp.disable_function.function("function_exists").param("function_name").value("shell_exec").drop();
+# sp.disable_function.function("function_exists").param("function_name").value("shell_exec").drop();
 sp.disable_function.function("function_exists").param("function_name").value("proc_open").drop();
 sp.disable_function.function("function_exists").param("function_name").value("passthru").drop();
 sp.disable_function.function("is_callable").param("var").value("eval").drop();
 sp.disable_function.function("is_callable").param("var").value("exec").drop();
 sp.disable_function.function("is_callable").param("var").value("system").drop();
-sp.disable_function.function("is_callable").param("var").value("shell_exec").drop();
+# sp.disable_function.function("is_callable").param("var").value("shell_exec").drop();
 sp.disable_function.function("is_callable").param("var").value("proc_open").drop();
 sp.disable_function.function("is_callable").param("var").value("passthru").drop();
 
