fix(snuffleupagus): comment out disable_xxe

--- a/templates/misp-snuffleupagus-rules.ini.j2
+++ b/templates/misp-snuffleupagus-rules.ini.j2
@@ -21,9 +21,10 @@
 #sp.sloppy_comparison.simulation().enable();
 #sp.readonly_exec.simulation().enable();
 
+sp.global.show_old_php_warning.disable();
 sp.global.secret_key("{{ snuffleupagus_secret1.stdout | default(snuffleupagus_secret2.stdout) }}");
 sp.harden_random.enable();
-sp.disable_xxe.enable();
+#sp.disable_xxe.enable();
 sp.eval_blacklist.list("system,exec");
 sp.eval_whitelist.list("strlen,strcmp").simulation();
 
