--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -42,6 +42,11 @@ Listen {{ misp_base_port }}
     SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_fqdn }}.key
     Include {{ apacheetc }}/harden-apache2-https.conf
 
+{% else %}
+    # If direct access without https, ensure CSP is not including
+    # Upgrade-Insecure-Requests
+    Header set Content-Security-Policy "default-src 'self' data: 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; object-src 'none'; frame-ancestors 'none'; worker-src 'none'; child-src 'none'; frame-src 'none'; base-uri 'self'; img-src 'self' data:; font-src 'self'; form-action 'self'; connect-src 'self'; manifest-src 'none'; report-uri /servers/cspReport;"
+
 {% endif %}
     <LocationMatch /attributes/.*>
         <IfModule mod_security2.c>
