--- a/templates/misp-snuffleupagus-rules.ini.j2
+++ b/templates/misp-snuffleupagus-rules.ini.j2
@@ -22,68 +22,68 @@
 #sp.readonly_exec.simulation().enable();
 
 sp.global.show_old_php_warning.disable();
-sp.global.secret_key("{{ snuffleupagus_secret1.stdout | default(snuffleupagus_secret2.stdout) }}");
-sp.harden_random.enable();
-#sp.disable_xxe.enable();
-sp.eval_blacklist.list("system,exec");
-sp.eval_whitelist.list("strlen,strcmp").simulation();
-
-# use SameSite on session cookie
-sp.cookie.name("PHPSESSID").samesite("lax");
-
-# Harden the `chmod` function
-# Note: checked against Cake Cache::config mask
-# Harden the `chmod` function (0777 (oct = 511, 0666 = 438)
-sp.disable_function.function("chmod").param("permissions").value("438").drop();
-sp.disable_function.function("chmod").param("permissions").value("511").drop();
-sp.disable_function.function("chmod").param("mode").value_r("^[0-9]{2}[7]$").drop();
-
-# Prevent various `mail`-related vulnerabilities
-sp.disable_function.function("mail").param("additional_parameters").value_r("\\-").drop();
-
-# Since it's now burned, me might as well mitigate it publicly
-sp.disable_function.function("putenv").param("setting").value_r("LD_").drop()
-
-##Prevent various `include`-related vulnerabilities
-sp.disable_function.function("require_once").value_r("\.(inc|phtml|php)$").allow();
-sp.disable_function.function("include_once").value_r("\.(inc|phtml|php)$").allow();
-sp.disable_function.function("require").value_r("\.(inc|phtml|php)$").allow();
-sp.disable_function.function("include").value_r("\.(inc|phtml|php|ctp)$").allow();
-sp.disable_function.function("require_once").drop()
-sp.disable_function.function("include_once").drop()
-sp.disable_function.function("require").drop()
-sp.disable_function.function("include").drop()
-
-# Prevent `system`-related injections
-sp.disable_function.function("system").param("command").value_r("[$|;&`\\n]").drop();
-# sp.disable_function.function("shell_exec").param("command").value_r("[$|;&`\\n]").drop();
-sp.disable_function.function("exec").param("command").value_r("[$|;&`\\n]").drop();
-sp.disable_function.function("proc_open").param("command").value_r("[$|;&`\\n]").drop();
-
-# Prevent runtime modification of interesting things
-sp.disable_function.function("ini_set").param("var_name").value("assert.active").drop();
-sp.disable_function.function("ini_set").param("var_name").value("zend.assertions").drop();
-sp.disable_function.function("ini_set").param("var_name").value("memory_limit").drop();
-sp.disable_function.function("ini_set").param("var_name").value("include_path").drop();
-sp.disable_function.function("ini_set").param("var_name").value("open_basedir").drop();
-
-# Detect some backdoors via environment recon
-sp.disable_function.function("ini_get").param("var_name").value("allow_url_fopen").drop();
-sp.disable_function.function("ini_get").param("var_name").value("open_basedir").drop();
-sp.disable_function.function("ini_get").param("var_name").value_r("suhosin").drop();
-sp.disable_function.function("function_exists").param("function_name").value("eval").drop();
-sp.disable_function.function("function_exists").param("function_name").value("exec").drop();
-sp.disable_function.function("function_exists").param("function_name").value("system").drop();
-# sp.disable_function.function("function_exists").param("function_name").value("shell_exec").drop();
-sp.disable_function.function("function_exists").param("function_name").value("proc_open").drop();
-sp.disable_function.function("function_exists").param("function_name").value("passthru").drop();
-sp.disable_function.function("is_callable").param("var").value("eval").drop();
-sp.disable_function.function("is_callable").param("var").value("exec").drop();
-sp.disable_function.function("is_callable").param("var").value("system").drop();
-# sp.disable_function.function("is_callable").param("var").value("shell_exec").drop();
-sp.disable_function.function("is_callable").param("var").value("proc_open").drop();
-sp.disable_function.function("is_callable").param("var").value("passthru").drop();
-
-# File upload
-sp.disable_function.function("move_uploaded_file").param("destination").value_r("\\.ph").drop();
-sp.disable_function.function("move_uploaded_file").param("destination").value_r("\\.ht").drop();
+#sp.global.secret_key("{{ snuffleupagus_secret1.stdout | default(snuffleupagus_secret2.stdout) }}");
+#sp.harden_random.enable();
+##sp.disable_xxe.enable();
+#sp.eval_blacklist.list("system,exec");
+#sp.eval_whitelist.list("strlen,strcmp").simulation();
+#
+## use SameSite on session cookie
+#sp.cookie.name("PHPSESSID").samesite("lax");
+#
+## Harden the `chmod` function
+## Note: checked against Cake Cache::config mask
+## Harden the `chmod` function (0777 (oct = 511, 0666 = 438)
+#sp.disable_function.function("chmod").param("permissions").value("438").drop();
+#sp.disable_function.function("chmod").param("permissions").value("511").drop();
+#sp.disable_function.function("chmod").param("mode").value_r("^[0-9]{2}[7]$").drop();
+#
+## Prevent various `mail`-related vulnerabilities
+#sp.disable_function.function("mail").param("additional_parameters").value_r("\\-").drop();
+#
+## Since it's now burned, me might as well mitigate it publicly
+#sp.disable_function.function("putenv").param("setting").value_r("LD_").drop()
+#
+###Prevent various `include`-related vulnerabilities
+#sp.disable_function.function("require_once").value_r("\.(inc|phtml|php)$").allow();
+#sp.disable_function.function("include_once").value_r("\.(inc|phtml|php)$").allow();
+#sp.disable_function.function("require").value_r("\.(inc|phtml|php)$").allow();
+#sp.disable_function.function("include").value_r("\.(inc|phtml|php|ctp)$").allow();
+#sp.disable_function.function("require_once").drop()
+#sp.disable_function.function("include_once").drop()
+#sp.disable_function.function("require").drop()
+#sp.disable_function.function("include").drop()
+#
+## Prevent `system`-related injections
+#sp.disable_function.function("system").param("command").value_r("[$|;&`\\n]").drop();
+## sp.disable_function.function("shell_exec").param("command").value_r("[$|;&`\\n]").drop();
+#sp.disable_function.function("exec").param("command").value_r("[$|;&`\\n]").drop();
+#sp.disable_function.function("proc_open").param("command").value_r("[$|;&`\\n]").drop();
+#
+## Prevent runtime modification of interesting things
+#sp.disable_function.function("ini_set").param("var_name").value("assert.active").drop();
+#sp.disable_function.function("ini_set").param("var_name").value("zend.assertions").drop();
+#sp.disable_function.function("ini_set").param("var_name").value("memory_limit").drop();
+#sp.disable_function.function("ini_set").param("var_name").value("include_path").drop();
+#sp.disable_function.function("ini_set").param("var_name").value("open_basedir").drop();
+#
+## Detect some backdoors via environment recon
+#sp.disable_function.function("ini_get").param("var_name").value("allow_url_fopen").drop();
+#sp.disable_function.function("ini_get").param("var_name").value("open_basedir").drop();
+#sp.disable_function.function("ini_get").param("var_name").value_r("suhosin").drop();
+#sp.disable_function.function("function_exists").param("function_name").value("eval").drop();
+#sp.disable_function.function("function_exists").param("function_name").value("exec").drop();
+#sp.disable_function.function("function_exists").param("function_name").value("system").drop();
+## sp.disable_function.function("function_exists").param("function_name").value("shell_exec").drop();
+#sp.disable_function.function("function_exists").param("function_name").value("proc_open").drop();
+#sp.disable_function.function("function_exists").param("function_name").value("passthru").drop();
+#sp.disable_function.function("is_callable").param("var").value("eval").drop();
+#sp.disable_function.function("is_callable").param("var").value("exec").drop();
+#sp.disable_function.function("is_callable").param("var").value("system").drop();
+## sp.disable_function.function("is_callable").param("var").value("shell_exec").drop();
+#sp.disable_function.function("is_callable").param("var").value("proc_open").drop();
+#sp.disable_function.function("is_callable").param("var").value("passthru").drop();
+#
+## File upload
+#sp.disable_function.function("move_uploaded_file").param("destination").value_r("\\.ph").drop();
+#sp.disable_function.function("move_uploaded_file").param("destination").value_r("\\.ht").drop();
