Ensure we use misp_webserver_harden properly
  * This variable is useful to avoid unrequired role dependency;
  * Should one does not to depend on juju4/ansible-harden-apache, just
    set to false.

--- a/templates/apache2-misp.conf.j2
+++ b/templates/apache2-misp.conf.j2
@@ -40,7 +40,10 @@ Listen {{ misp_base_port }}
 {% endif %}
     SSLCertificateFile {{ ssl_dir }}/{{ ansible_fqdn }}.crt
     SSLCertificateKeyFile {{ ssl_privatedir }}/{{ ansible_fqdn }}.key
+
+{% if misp_webserver_harden %}
     Include {{ apacheetc }}/harden-apache2-https.conf
+{% endif %}
 
 {% else %}
     # If direct access without https, ensure CSP is not including
