feat: bump misp version to 2.5 along dependencies (24.04 only, PHP8.2+), add variables and config settings, clean old stuff, misp-modules systemd

--- a/templates/config.php.j2
+++ b/templates/config.php.j2
@@ -18,6 +18,7 @@ $config = array (
 {% endif %}
     'cached_attachments' => true,
     'email' => '{{ misp_email_contact }}',
+    'email_reply_to' => '{{ misp_email_reply_to }}',
     'contact' => '{{ misp_email_contact }}',
     'cveurl' => 'http://cve.circl.lu/cve/',
     'cweurl' => 'http://cwe.circl.lu/cwe/',
@@ -72,6 +73,12 @@ $config = array (
     'user_email_notification_ban_time_threshold' => 120,
     'user_email_notification_ban_amount_threshold' => 10,
     'block_old_event_alert_by_date' => 30,
+    'default_object_distribution' => 'event',
+    'default_eventreport_distribution' => 'event',
+    'newUserText' => 'Dear new MISP user,\\n\\nWe would hereby like to welcome you to the $org MISP community.\\n\\n Use the credentials below to log into MISP at $misp, where you will be prompted to manually change your password to something of your own choice.\\n\\nUsername: $username\\nPassword: $password\\n\\nIf you have any questions, don\'t hesitate to contact us at: $contact.\\n\\nBest regards,\\nYour $org MISP support team',
+    'passwordResetText' => 'Dear MISP user,\\n\\nA password reset has been triggered for your account. Use the below provided temporary password to log into MISP at $misp, where you will be prompted to manually change your password to something of your own choice.\\n\\nUsername: $username\\nYour temporary password: $password\\n\\nIf you have any questions, don\'t hesitate to contact us at: $contact.\\n\\nBest regards,\\nYour $org MISP support team',
+    'enableSightingBlocklisting' => true,
+    'attachment_scan_module' => 'clamav',
   ),
   'GnuPG' =>
   array (
@@ -80,6 +87,8 @@ $config = array (
     'homedir' => '{{ misp_gpg_homedir }}',
     'password' => '{{ misp_gpg_pass }}',
     'bodyonlyencrypted' => false,
+    'obscure_subject' => true,
+    'key_fetching_disabled' => false,
   ),
   'SMIME' => NULL,
   'Proxy' =>
@@ -110,6 +119,9 @@ $config = array (
     'force_https' => true,
     'disable_browser_cache' => true,
     'check_sec_fetch_site_header' => true,
+    'username_in_response_header' => true,
+    'alert_on_suspicious_logins' => true,
+    'self_registration_message' => 'If you would like to send us a registration request, please fill out the form below. Make sure you fill out as much information as possible in order to ease the task of the administrators.',
   ),
   'Session.defaults' => 'php',
   'Session.timeout' => 60,
@@ -125,6 +137,7 @@ $config = array (
     'Enrichment_services_port' => 6666,
     'Enrichment_timeout' => 10,
     'Enrichment_hover_timeout' => 5,
+    'Enrichment_clamav_connection' => 'unix:///var/run/clamav/clamd.ctl',
     'Import_services_enable' => true,
     'Import_services_url' => 'http://127.0.0.1',
     'Import_services_port' => 6666,
@@ -147,6 +160,104 @@ $config = array (
     'Action_services_port' => 6666,
     'Action_timeout' => 10,
     'Workflow_enable' => false,
+    'Sightings_anonymise_as' => 0,
+    'Sightings_enable_realtime_publish' => false,
+    'Workflow_debug_url' => 'http://127.0.0.1:27051',
+    'CTIInfoExtractor_enable' => false,
+    'Enrichment_cuckoo_submit_enabled' => false,
+    'Enrichment_vmray_submit_enabled' => false,
+    'Enrichment_circl_passivedns_enabled' => false,
+    'Enrichment_qrcode_enabled' => false,
+    'Enrichment_ocr_enrich_enabled' => false,
+    'Enrichment_pdf_enrich_enabled' => false,
+    'Enrichment_docx_enrich_enabled' => false,
+    'Enrichment_xlsx_enrich_enabled' => false,
+    'Enrichment_pptx_enrich_enabled' => false,
+    'Enrichment_ods_enrich_enabled' => false,
+    'Enrichment_odt_enrich_enabled' => false,
+    'Enrichment_joesandbox_submit_enabled' => false,
+    'Enrichment_joesandbox_query_enabled' => false,
+    'Enrichment_urlhaus_enabled' => false,
+    'Enrichment_virustotal_public_enabled' => false,
+    'Enrichment_apiosintds_enabled' => false,
+    'Enrichment_urlscan_enabled' => false,
+    'Enrichment_securitytrails_enabled' => false,
+    'Enrichment_apivoid_enabled' => false,
+    'Enrichment_assemblyline_submit_enabled' => false,
+    'Enrichment_assemblyline_query_enabled' => false,
+    'Enrichment_ransomcoindb_enabled' => false,
+    'Enrichment_malwarebazaar_enabled' => false,
+    'Enrichment_lastline_query_enabled' => false,
+    'Enrichment_lastline_submit_enabled' => false,
+    'Enrichment_sophoslabs_intelix_enabled' => false,
+    'Enrichment_cytomic_orion_enabled' => false,
+    'Enrichment_censys_enrich_enabled' => false,
+    'Enrichment_trustar_enrich_enabled' => false,
+    'Enrichment_recordedfuture_enabled' => false,
+    'Enrichment_html_to_markdown_enabled' => false,
+    'Enrichment_socialscan_enabled' => false,
+    'Enrichment_passive_ssh_enabled' => false,
+    'Enrichment_qintel_qsentry_enabled' => false,
+    'Enrichment_mwdb_enabled' => false,
+    'Enrichment_hashlookup_enabled' => false,
+    'Enrichment_mmdb_lookup_enabled' => false,
+    'Enrichment_ipqs_fraud_and_risk_scoring_enabled' => false,
+    'Enrichment_clamav_enabled' => true,
+    'Enrichment_jinja_template_rendering_enabled' => false,
+    'Enrichment_hyasinsight_enabled' => false,
+    'Enrichment_variotdbs_enabled' => false,
+    'Enrichment_crowdsec_enabled' => false,
+    'Enrichment_extract_url_components_enabled' => false,
+    'Enrichment_ipinfo_enabled' => false,
+    'Enrichment_whoisfreaks_enabled' => false,
+    'Enrichment_ip2locationio_enabled' => false,
+    'Enrichment_stairwell_enabled' => false,
+    'Enrichment_google_threat_intelligence_enabled' => false,
+    'Enrichment_vulnerability_lookup_enabled' => false,
+    'Enrichment_vysion_enabled' => false,
+    'Enrichment_mcafee_insights_enrich_enabled' => false,
+    'Enrichment_threatfox_enabled' => false,
+    'Enrichment_yeti_enabled' => false,
+    'Enrichment_abuseipdb_enabled' => false,
+    'Enrichment_vmware_nsx_enabled' => false,
+    'Enrichment_sigmf_expand_enabled' => false,
+    'Enrichment_google_safe_browsing_enabled' => false,
+    'Enrichment_google_search_enabled' => false,
+    'Enrichment_whois_enabled' => false,
+    'Enrichment_triage_submit_enabled' => false,
+    'Enrichment_virustotal_upload_enabled' => false,
+    'Enrichment_malshare_upload_enabled' => false,
+    'Enrichment_convert_markdown_to_pdf_enabled' => false,
+    'Import_vmray_import_enabled' => false,
+    'Import_lastline_import_enabled' => false,
+    'Import_ocr_enabled' => false,
+    'Import_cuckooimport_enabled' => false,
+    'Import_goamlimport_enabled' => false,
+    'Import_email_import_enabled' => false,
+    'Import_mispjson_enabled' => false,
+    'Import_openiocimport_enabled' => false,
+    'Import_threatanalyzer_import_enabled' => false,
+    'Import_csvimport_enabled' => false,
+    'Import_cof2misp_enabled' => false,
+    'Import_joe_import_enabled' => false,
+    'Import_taxii21_enabled' => false,
+    'Import_url_import_enabled' => false,
+    'Import_vmray_summary_json_import_enabled' => false,
+    'Import_import_blueprint_enabled' => false,
+    'Export_cef_export_enabled' => false,
+    'Export_mass_eql_export_enabled' => false,
+    'Export_liteexport_enabled' => false,
+    'Export_goamlexport_enabled' => false,
+    'Export_threat_connect_export_enabled' => false,
+    'Export_pdfexport_enabled' => false,
+    'Export_threatStream_misp_export_enabled' => false,
+    'Export_osqueryexport_enabled' => false,
+    'Export_nexthinkexport_enabled' => false,
+    'Export_vt_graph_enabled' => false,
+    'Export_defender_endpoint_export_enabled' => false,
+    'Export_virustotal_collections_enabled' => false,
+    'Export_yara_export_enabled' => false,
+    'Export_cisco_firesight_manager_ACL_rule_export_enabled' => false,
   ),
 {% if (
       (ansible_distribution == 'Ubuntu' and ansible_distribution_major_version | int >= 20) or
